--- a/templates/candlestick.html
+++ b/templates/candlestick.html
@@ -3,7 +3,7 @@
 <head>
 <title>Coinbase Candlesticks</title>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="http://code.highcharts.com/stock/highstock.js"></script>
+<script src="//code.highcharts.com/stock/highstock.js"></script>
 </head>
 <body>
 
