--- a/templates/candlestick.html
+++ b/templates/candlestick.html
@@ -42,17 +42,17 @@ $(function() {
 setInterval(function(){ // The interval runs every 5 seconds. After it runs twice it pushes to the graph.
 
 if(i == 0){// If we are at the top of an interval, get the open. TODO: need to make this aware of second runs opening being the last close.
- $.getJSON( "http://127.0.0.1:5000/api/v1/prices/spot_rate", function( data ){open = data.amount;});
+ $.getJSON( "/api/v1/prices/spot_rate", function( data ){open = data.amount;});
 }
 
 // Grab data for comparison.
-$.getJSON( "http://127.0.0.1:5000/api/v1/prices/sell", function( data ){high_low.push(data.subtotal.amount);});
+$.getJSON( "/api/v1/prices/sell", function( data ){high_low.push(data.subtotal.amount);});
 
-$.getJSON( "http://127.0.0.1:5000/api/v1/prices/buy", function( data ){high_low.push(data.subtotal.amount);});
+$.getJSON( "/api/v1/prices/buy", function( data ){high_low.push(data.subtotal.amount);});
 
 i+=5;
 if(i === 10){ // If we are at the second call we need to close out.
- $.getJSON( "http://127.0.0.1:5000/api/v1/prices/spot_rate", function( data ){
+ $.getJSON( "/api/v1/prices/spot_rate", function( data ){
  close = data.amount;
  high_low.sort(function(a,b){ return a - b}); // sort the array ascending.
 
